Update OpenApp.java