@@ -4,6 +4,6 @@ import java.lang.*;
 public class OpenApp {
   public static void main(String[] args) {
     System.out.println("Opening App");
-    Process process = Runtime.getRuntime().exec("open /System/Applications/Books.app");
+    Runtime.exec(new String[]{"open","/Applications/Chess.app"})
   }
 }
